feat: walletconnect kit wagmi

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -3,55 +3,80 @@
 @tailwind utilities;
 
 .wrapper {
-    box-sizing: border-box;
-    padding: 50px;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 50px;
+  margin: 0;
+}
+
+.items {
+  display: flex;
+  justify-content: center;
+}
+
+.item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(131.83deg, #fffafa 0%, #fff7f7 99.21%);
+  width: 300px;
+  text-align: center;
+  height: 300px;
+  border-radius: 16px;
+  position: relative;
+}
+
+.item:not(:last-child) {
+  margin-right: 100px;
+}
+.item::before {
+  position: absolute;
+  content: "";
+  top: -2px;
+  bottom: -2px;
+  left: -2px;
+  right: -2px;
+  background-image: linear-gradient(
+    312.25deg,
+    #ffc4bc 0%,
+    rgba(255, 255, 255, 0) 66.19%
+  );
+  z-index: -1;
+  border-radius: 18px;
+}
+
+.inner {
+  background-color: #fffaf4;
+  width: 700px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 600px;
+  box-shadow: 0 40px 80px #fbe4e0;
+  border-radius: 14px;
+}
+
+.name {
+  font-size: 48px;
+  margin: 0;
+}
+
+/* Loading style */
+.spinner {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  background: #474bff;
+  -webkit-mask: radial-gradient(
+    circle closest-side at 50% 40%,
+    #0000 94%,
+    #000
+  );
+  transform-origin: 50% 40%;
+  animation: spinner-pl92zb 1s infinite linear;
+}
+
+@keyframes spinner-pl92zb {
+  100% {
+    transform: rotate(1turn);
   }
-  
-  .items {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: linear-gradient(131.83deg, #FFFAFA 0%,     #FFF7F7 99.21%);
-    width: 300px;
-    text-align: center;
-    height: 300px;
-    border-radius: 16px;
-    position: relative;
-  }
-  
-  .item:not(:last-child) {
-    margin-right: 100px;
-  }
-  .item::before {
-    position: absolute;
-    content: "";
-    top: -2px;
-    bottom: -2px;
-    left: -2px;
-    right: -2px;
-    background-image: linear-gradient(312.25deg, #FFC4BC 0%,     rgba(255, 255, 255, 0) 66.19%);
-    z-index: -1;
-    border-radius: 18px;
-  }
-  
-  .inner {
-    background-color: #FFFAF4;
-    width: 700px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 600px;
-    box-shadow: 0 40px 80px #FBE4E0;
-    border-radius: 14px;
-  }
-  
-  .name {
-    font-size: 48px;
-    margin: 0;
-  }
+}
