--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -98,3 +98,9 @@
   85%  {background-color: violet;}
   100% {background-color: red;}
 }
+
+.freeman-regular {
+  font-family: "Freeman", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
