feat: integration and UIUX improvement

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -105,3 +105,8 @@
   font-style: normal;
 }
 
+.poetsen-one-regular {
+  font-family: "Poetsen One", sans-serif;
+  font-weight: 1600;
+  font-style: normal;
+}
